debug.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug
  namespace: keycloak
  labels:
    app: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debug
  template:
    metadata:
      labels:
        app: debug
        dataiku.com/dku-project-key: sc73901
    spec:
      containers:
        - name: debug
          image: qcastel/docker-alpine-with-bash
          command: [ "/bin/bash", "-c", "--" ]
          args: [ "while true; do sleep 30; done;" ]
