hello-world.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: keycloak
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      nodeSelector:
        pool-name: default-pool
      containers:
        - name: hello-world
          image: vad1mo/hello-world-rest
          ports:
            - name: http-server
              containerPort: 5050
          readinessProbe:
            httpGet:
              path: /
              port: 5050
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
