keycloak.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          ports:
            - name: http-server
              containerPort: 5432
          volumeMounts:
            - name: db-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
          command: ["/cloud_sql_proxy"]
          args: ["-instances=$(GCLOUD_PROJECT_ID):europe-west2:$(DATABASE_ID)=tcp:0.0.0.0:5432",
                 "-credential_file=/secrets/cloudsql/credentials.json",
                 "-term_timeout=10s"]
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          imagePullPolicy: Always
          command: ["start-dev"]
          ports:
            - name: http-server
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
          resources:
            requests:
              memory: "500Mi"
              cpu: "300m"
            limits:
              memory: "1000Mi"
      volumes:
        - name: db-credentials
          secret:
            secretName: db-credentials
            items:
              - key: sqlproxy-service-account
                path: credentials.json
