ldap.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap
  labels:
    app: ldap
spec:
  selector:
    matchLabels:
      app: ldap
  replicas: 1
  template:
    metadata:
      labels:
        app: ldap
    spec:
      containers:
        - name: ldap
          image: docker.io/bitnami/openldap:latest
          imagePullPolicy: "Always"
          ports:
            - name: tcp-ldap
              containerPort: 1389
            - name: tls-ldap
              containerPort: 1636
          volumeMounts:
            - mountPath: /ldap-config/
              name: ldap-config
      volumes:
        - name: ldap-config
          configMap:
            name: ldap-configmap
