fm.endpointslice.yml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: fm-gcp # by convention, use the name of the Service
                     # as a prefix for the name of the EndpointSlice
  labels:
    # You should set the "kubernetes.io/service-name" label.
    # Set its value to match the name of the Service
    kubernetes.io/service-name: fm-gcp
addressType: IPv4
ports:
  - name: '' # empty because port 9376 is not assigned as a well-known
             # port (by IANA)
    appProtocol: http
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - "34.159.25.224"
