fm.service.yml
apiVersion: v1
kind: Service
metadata:
  name: fm-gcp
  labels:
    app: fm-gcp
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 443
