keycloak.service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  type: LoadBalancer
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
