ldap.service.yml
apiVersion: v1
kind: Service
metadata:
  name: ldap
  labels:
    app: ldap
spec:
  type: LoadBalancer
  selector:
    app: ldap
  ports:
    - port: 1389
      targetPort: 1389
