ldap.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ldap
  labels:
    app.kubernetes.io/name: ldap
spec:
  type: ClusterIP
  ports:
    - name: tcp-ldap
      port: 1389
      targetPort: tcp-ldap
  selector:
    app.kubernetes.io/name: ldap
