fm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fm-gcp-external-ip
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 10000
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: fm-gcp-external-ip
subsets:
- addresses:
  - ip: 10.0.0.2
  ports:
  - name: app
    port: 10000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fm-gcp-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-keycloak"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - fm.gcp.platform.dkucloud-dev.com
      secretName: fm-gcp-cert

  rules:
    - host: fm.gcp.platform.dkucloud-dev.com
      http:
        paths:
          - pathType: ImplementationSpecific 
            path: /
            backend:
              service:
                name: fm-gcp-external-ip
                port:
                  number: 80
