hello-world.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: hello-world
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - hello-world.platform.dkucloud-dev.com
      secretName: hello-world-cert

  rules:
    - host: hello-world.platform.dkucloud-dev.com
      http:
        paths:
          - backend:
              name: hello-world
              port:
                number: 5050
