ingress-ssl-fail.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ssl-fail-ingress
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: keycloak-ssl-fail.platform.dkucloud-dev.com
      secretName: letsencrypt-keycloak-ssl-fail
      http:
        paths:
          - pathType: ImplementationSpecific 
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
